<resources>
    <string name="app_name">XkcdComicView</string>
    <string name="previous_comic">&lt;Prev </string>
    <string name="first_comic">|&lt; </string>
    <string name="next_comic">Next&gt; </string>
    <string name="latest_comic">&gt;| </string>
    <string name="Random_comic">Random</string>
    <string name="explanation_title">Explanation:</string>
    <string name="four_o_four">404</string>
    <string name="explanation">Explanation:</string>
    <string name="save">Save:</string>
    <string name="gallery">Gallery:</string>
    <string name="share">Share:</string>
    <string name="comic_image">Comic Image</string>
</resources>
